--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,7 @@ a:hover {
   .logo-break {
     display: block;
     line-height: 1.3;
-    margin-top: 8px;
+    margin-top: 2px;
   }
 }
 
@@ -482,11 +482,13 @@ ul li a {
   position: relative;
 }
 .site-navbar .site-logo a {
-  font-weight: 200;
-  color: #fff;
-  font-size: 2rem;
-  font-weight: bold;
+  display: inline-block;
+  padding-left: 0.75rem; /* Tambah jarak dari kiri */
+  line-height: 1.1; /* Rapatkan sedikit jarak antar baris */
+  font-size: 1.5rem;
+  font-weight: 700;
 }
+
 .site-navbar .site-navigation .site-menu {
   margin-bottom: 0;
 }
